fix(css): fix header width on mobile
- use minmax in css grid

--- a/src/components/Header/HeaderView.css
+++ b/src/components/Header/HeaderView.css
@@ -1,6 +1,6 @@
 div#header {
   display: grid;
-  grid-template-columns: 3rem 1fr min(48rem, 80%) 4rem 1fr 3rem;
+  grid-template-columns: 3rem 1fr minmax(12rem, 48rem) 4rem 1fr 3rem;
   grid-template-rows: 0.5rem 2rem 0.5rem;
 
   padding: 0.5rem 1.25rem;
